Have fixed responsiveness issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   align-items: center;
   justify-content: center;
   display: grid;
-  margin-top: 2%;
+  margin-top: 2.5%;
 }
 
 .RecipeGridSmall {
@@ -59,14 +59,12 @@
   max-height: 19vh;
   direction: row;
   margin-left: 5%;
-  /* border-color: red;
-  border-style: solid; */
+  
   
 }
 
 .RecipeComponentSmallTextBox {
   justify-content: start;
-  margin-top: 18%;
   margin-left: 10px;
   font-size: small;
   /* border-color: red;
@@ -74,18 +72,14 @@
 }
 
 .RecipeComponentSmallText {
-  margin-top: 10%;
   margin-left: 10px;
   font-size: small;
-  
-  /* border-color: red;
-  border-style: solid; */
+  margin-top: 12%;
 }
 
 .RecipeComponentSmallLogoContainer{
-  /* border-color: red; */
-  /* border-style: solid; */
-  /* align-content: center; */
+  /* border-color: red;
+  border-style: solid; */
 }
 .RecipeComponentSmallLogo{
   vertical-align: top;
@@ -94,8 +88,7 @@
 }
 
 .RecipeImage {
-  display: block;
-  margin-top: 15%;
+  margin-top: 10%;
   height: 50%;
   border-radius: 15px;
   vertical-align: bottom;
@@ -118,6 +111,8 @@
   vertical-align: bottom;
   background-size: cover;
   background-position: center;
+  /* border-color: red;
+  border-style: solid; */
 }
 
 .LockedElement {
@@ -129,15 +124,15 @@
   border: #61dafb;
 }
 
-
-
-/* .groceryListTop {
-  position: fixed;
+.redBorder {
+  border-color: red;
+  border-style: solid;
 }
 
-.groceryListMiddle {
-  background-color: blanchedalmond;
-} */
+.smallSelectorContainer {
+  margin-top: 72%;
+}
+
 
 #låsOpskriftKnap {
   margin-top: 25%;
