--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgba(229, 234, 240, 1);
-  /* overflow: hidden;  NOTE: THIS DISABLES SCROLL*/
+  /*  NOTE: THIS DISABLES SCROLL */
+  overflow: hidden;  
 }
 
 code {
